--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>TF145 DND</title>
-  <base href="/"> 
+  <base href="/TF145-DND/"> 
   <!-- <base href="/TF145-DND/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
